@@ -12,7 +12,7 @@ GLIB_LIBPATH = c:\Devel\Port\glib
 GLIB_LIB = glib-1.2.lib
 
 # libIDL dll version
-LIBIDL_REALVER = @LIBIDL_LIBRARY_VERSION@
+LIBIDL_REALVER = @LIBIDL_VERSION@
 LIBIDL_LIBVER = @LIBIDL_MAJOR_VERSION@.@LIBIDL_MINOR_VERSION@
 
 # Debug build
@@ -44,7 +44,7 @@ libIDL-$(LIBIDL_LIBVER).dll: $(libIDL_OBJECTS)
         $(CC) $(CFLAGS) -MD -LD -FelibIDL-$(LIBIDL_LIBVER).dll $(libIDL_OBJECTS) $(GLIB_LIB) user32.lib advapi32.lib $(LDFLAGS) /def:libIDL.def
 
 .c.obj:
-        $(CC) $(CFLAGS) -GD -c -DPACKAGE=\"libIDL\" -DLIBIDL_LIBRARY_VERSION=\"$(LIBIDL_REALVER)\" -DHAVE_CPP_PIPE_STDIN=1 -DCPP_PROGRAM="\"notsupported\"" -DYYTEXT_POINTER=1 -DSTDC_HEADERS=1 -DHAVE_STDDEF_H=1 -DHAVE_WCHAR_H=1 -DYYDEBUG=1 -DIDL_LIBRARY -DG_LOG_DOMAIN=\"libIDL\" $<
+        $(CC) $(CFLAGS) -GD -c -DPACKAGE=\"libIDL\" -DLIBIDL_VERSION=\"$(LIBIDL_REALVER)\" -DHAVE_CPP_PIPE_STDIN=1 -DCPP_PROGRAM="\"notsupported\"" -DYYTEXT_POINTER=1 -DSTDC_HEADERS=1 -DHAVE_STDDEF_H=1 -DHAVE_WCHAR_H=1 -DYYDEBUG=1 -DIDL_LIBRARY -DG_LOG_DOMAIN=\"libIDL\" $<
 
 tstidl.exe: libIDL-$(LIBIDL_LIBVER).dll tstidl.obj
         $(CC) $(CFLAGS) -MD -Fetstidl.exe tstidl.obj libIDL-$(LIBIDL_LIBVER).lib $(GLIB_LIB) $(LDFLAGS) /map
