@@ -3,56 +3,38 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(IDL.h.new.in)
 
-AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
-#
-# Making releases:
-#   LIBIDL_MICRO_VERSION += 1;
-#   LIBIDL_INTERFACE_AGE += 1;
-#   LIBIDL_BINARY_AGE += 1;
-# if any functions have been added, set LIBIDL_INTERFACE_AGE to 0.
-# if backwards compatibility has been broken,
-# set LIBIDL_BINARY_AGE and LIBIDL_INTERFACE_AGE to 0.
-#
 LIBIDL_MAJOR_VERSION=0
 LIBIDL_MINOR_VERSION=7
 LIBIDL_MICRO_VERSION=0
-LIBIDL_INTERFACE_AGE=0
-LIBIDL_BINARY_AGE=0
-LIBIDL_LIBRARY_VERSION=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION.$LIBIDL_MICRO_VERSION
-GLIB_VERSION_REQUIRED=1.3.7
-AC_DIVERT_POP()dnl
-
+LIBIDL_VERSION=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION.$LIBIDL_MICRO_VERSION
 AC_SUBST(LIBIDL_MAJOR_VERSION)
 AC_SUBST(LIBIDL_MINOR_VERSION)
 AC_SUBST(LIBIDL_MICRO_VERSION)
-AC_SUBST(LIBIDL_LIBRARY_VERSION)
+AC_SUBST(LIBIDL_VERSION)
 
-LT_RELEASE=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION
-LT_CURRENT=`expr $LIBIDL_MICRO_VERSION - $LIBIDL_INTERFACE_AGE`
-LT_REVISION=$LIBIDL_INTERFACE_AGE
-LT_AGE=`expr $LIBIDL_BINARY_AGE - $LIBIDL_INTERFACE_AGE`
-AC_SUBST(LT_RELEASE)
-AC_SUBST(LT_CURRENT)
-AC_SUBST(LT_REVISION)
-AC_SUBST(LT_AGE)
+# Before making a release, the LT_VERSION string should be modified.
+# The string is of the form C:R:A.
+# - If interfaces have been changed or added, but binary compatibility
+# has
+#   been preserved, change to C+1:0:A+1
+# - If binary compatibility has been broken (eg removed or changed
+# interfaces)
+#   change to C+1:0:0
+# - If the interface is the same as the previous version, change to
+# C:R+1:A
 
-VERSION=$LIBIDL_LIBRARY_VERSION
-PACKAGE=libIDL
+LT_VERSION=0:0:0
+AC_SUBST(LT_VERSION)
 
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
+AM_INIT_AUTOMAKE(libIDL, $LIBIDL_VERSION, no-define)
 
-AC_DEFINE_UNQUOTED(LIBIDL_INTERFACE_AGE, $LIBIDL_INTERFACE_AGE)
-AC_DEFINE_UNQUOTED(LIBIDL_BINARY_AGE, $LIBIDL_BINARY_AGE)
-AC_DEFINE_UNQUOTED(LIBIDL_LIBRARY_VERSION, "$LIBIDL_LIBRARY_VERSION")
+AC_DEFINE_UNQUOTED(LIBIDL_VERSION, "$LIBIDL_VERSION")
 
-LIBIDL_INCLUDEDIR='@GLIB_CFLAGS@ -I${includedir}'
-LIBIDL_LIBDIR='-L${libdir}'
-LIBIDL_LIBS="-lIDL @GLIB_LIBS@"
-AC_SUBST(LIBIDL_LIBDIR)
-AC_SUBST(LIBIDL_LIBS)
-AC_SUBST(LIBIDL_INCLUDEDIR)
-
-ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
+dnl Cache $ACLOCAL_FLAGS
+AC_CACHE_CHECK([for aclocal flags], ac_cv_linc_aclocal_flags,[
+   ac_cv_linc_aclocal_flags="$ACLOCAL_FLAGS"
+])
+ACLOCAL="$ACLOCAL $ac_cv_linc_aclocal_flags"
 
 AC_ISC_POSIX
 
@@ -70,7 +52,7 @@ AC_DEFINE_UNQUOTED(CPP_PROGRAM, "$CPP")
 
 AM_PROG_LEX
 if [[ "$LEX" != "flex" ]]; then
-	AC_MSG_WARN(flex is required to create the $PACKAGE $VERSION scanner)
+	AC_MSG_WARN(flex is required to create the libIDL scanner)
 fi
 LFLAGS="-8"
 AC_SUBST(LFLAGS)
@@ -79,10 +61,9 @@ AM_PROG_LIBTOOL
 AM_MAINTAINER_MODE
 
 dnl Checks for libraries.
-AC_CHECK_PROG(HAVE_GLIB_CONFIG, glib-config, yes, no)
-
-AC_SUBST(GLIB_VERSION_REQUIRED)
-AM_PATH_GLIB_2_0($GLIB_VERSION_REQUIRED)
+PKG_CHECK_MODULES(LIBIDL, glib-2.0 >= 1.3.7)
+AC_SUBST(LIBIDL_LIBS)
+AC_SUBST(LIBIDL_CFLAGS)
 
 AC_STDC_HEADERS
 AC_CHECK_HEADERS(stddef.h)
@@ -110,7 +91,7 @@ AC_UPDATE_IF_CHANGED(IDL.h, IDL.h.new)
 ])
 
 echo
-echo libIDL $LIBIDL_LIBRARY_VERSION configuration complete
+echo libIDL $LIBIDL_VERSION configuration complete
 echo
 if [[ "$LEX" != "flex" ]]; then
 	echo "  Flex installed: no"
