@@ -6,7 +6,7 @@ includedir=@includedir@
 
 Name: libIDL
 Description: IDL parsing library
-Version: @VERSION@
+Version: @LIBIDL_VERSION@
 Requires: glib-2.0
 Libs: -L${libdir} -lIDL-2
 Cflags: -I${includedir}/libIDL-2.0
