@@ -1,4 +1,4 @@
-%define version @LIBIDL_LIBRARY_VERSION@
+%define version @LIBIDL_VERSION@
 %define release SNAP
 
 Summary:   IDL parsing library
@@ -15,6 +15,8 @@ Docdir:    %prefix/doc
 BuildRoot: /var/tmp/libIDL-%{version}-root
 
 %changelog
+* Mon Sep 24 2001 Mark McLoughlin <mark@skynet.ie>
+- use LIBIDL_VERSION instead of LIBIDL_LIBRARY_VERSION
 * Fri Nov 28 1998 Andrew T. Veliath <andrewtv@usa.net>
 - Initial version
 
